# vanessaTool

./: ai_pic_modify.py  ai_pic_modify2.py  app.py  build_exe.bat  build_win.spec  create_logo.py  main.py  modify.py  pyproject.toml  size_change.py  undone_item.txt
