[project]
name = "vanessatools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]
