[project]
name = "vanessatools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "numpy>=1.24.0",
    "tencentcloud-sdk-python>=3.1.100",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "requests>=2.34.2",
    "python-dotenv>=1.2.2",
    "langchain-openai>=1.2.1",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]
